--- a/demo/cooper_hewitt_Matchsafe.html
+++ b/demo/cooper_hewitt_Matchsafe.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="../css/amuse_um.css">
 <script src="../amuse_VIEW.js"></script>
 <script src="../amuse_EDIT.js"></script>
-<script src="web/common/amuse_um.js"></script>
+<script src="js/amuse_um.js"></script>
 <script src="web/objects/cooper_hewitt_Matchsafe.js"></script>
 <script type="text/javascript" >
 function start(){
