amuse_EDIT handles HTML5 File API and node-webkit

--- a/node_webkit/amuse_nw.html
+++ b/node_webkit/amuse_nw.html
@@ -7,7 +7,7 @@
 <script src="js/amuse_NW.js"></script>
 <script src="js/nFSO.js"></script>
 <script src="../amuse_VIEW.js"></script>
-<script src="js/amuse_EDIT_nw.js"></script>
+<script src="../amuse_EDIT.js"></script>
 <script src="js/amuse_NAMES.js"></script>
 <script src="../amuse_PARSE.js"></script>
 <script src="web/objects/amuse_TERMS.js"></script>
