--- a/node_webkit/amuse_nw.html
+++ b/node_webkit/amuse_nw.html
@@ -6,11 +6,11 @@
 <link rel="stylesheet" href="../css/amuse_um.css">
 <script src="js/amuse_NW.js"></script>
 <script src="js/nFSO.js"></script>
-<script src="../amuse_VIEW.js"></script>
-<script src="../amuse_EDIT.js"></script>
+<script src="js/amuse_VIEW.js"></script>
+<script src="js/amuse_EDIT.js"></script>
 <script src="js/amuse_NAMES.js"></script>
-<script src="../amuse_PARSE.js"></script>
-<script src="web/objects/amuse_TERMS.js"></script>
+<script src="js/amuse_PARSE.js"></script>
+<script src="objects/amuse_TERMS.js"></script>
 </head>
 <body>
 <div id="amused_body">
