--- a/demo/CHOOSE_amuse_um.html
+++ b/demo/CHOOSE_amuse_um.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>amuse_um json viewer</title>
-<link rel="stylesheet" href="../css/amuse_um.css">
+<link rel="stylesheet" href="css/amuse_um.css">
 <script src="js/amuse_CHOOSE.js"></script>
-<script src="../amuse_PARSE.js"></script>
-<script src="../amuse_VIEW.js"></script>
+<script src="js/amuse_PARSE.js"></script>
+<script src="js/amuse_VIEW.js"></script>
+<script src="js/amuse_EDIT.js"></script>
 </head>
 
 <body>
