re-organised node_webkit content

--- a/node_webkit/amuse_nw.html
+++ b/node_webkit/amuse_nw.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>AMUSE_UM BROWSER / EDITOR</title>
-<link rel="stylesheet" href="../css/amuse_um.css">
+<link rel="stylesheet" href="css/amuse_um.css">
 <script src="js/amuse_NW.js"></script>
 <script src="js/nFSO.js"></script>
 <script src="js/amuse_VIEW.js"></script>
