--- a/node_webkit/revise_JSON.html
+++ b/node_webkit/revise_JSON.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>amuse-um revise JSON</title>
-<link rel="stylesheet" href="../css/amuse_um.css">
+<link rel="stylesheet" href="css/amuse_um.css">
 <script src="js/revise_JSON.js"></script>
 <script src="js/nFSO.js"></script>
 <script src="js/amuse_PARSE.js"></script>
