Changes to use revealing module pattern

--- a/demo/CHOOSE_amuse_um.html
+++ b/demo/CHOOSE_amuse_um.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8">
 <title>amuse_um json viewer</title>
 <link rel="stylesheet" href="css/amuse_um.css">
-<script src="js/amuse_CHOOSE.js"></script>
+<script src="js/Choose.js"></script>
 <script src="js/amuse_PARSE.js"></script>
-<script src="js/amuse_VIEW.js"></script>
-<script src="js/amuse_EDIT.js"></script>
+<script src="js/Viewer.js"></script>
+<script src="js/Editor.js"></script>
 </head>
 
 <body>
