--- a/demo/cooper_hewitt_Matchsafe.html
+++ b/demo/cooper_hewitt_Matchsafe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>AMUSE_UM BROWSER / EDITOR</title>
+<title>AMUSE_UM BROWSER</title>
 <link rel="stylesheet" href="css/amuse_um.css">
-<script src="js/amuse_VIEW.js"></script>
+<script src="js/Viewer.js"></script>
 <script src="js/amuse_um.js"></script>
 <script src="objects/cooper_hewitt_Matchsafe.js"></script>
 <script type="text/javascript" >
