--- a/node_webkit/revise_JSON.html
+++ b/node_webkit/revise_JSON.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>amuse-um revise JSON</title>
 <link rel="stylesheet" href="css/amuse_um.css">
-<script src="js/revise_JSON.js"></script>
+<script src="js/Revise.js"></script>
 <script src="js/nFSO.js"></script>
 <script src="js/amuse_PARSE.js"></script>
 </head>
@@ -15,7 +15,7 @@
   </div>
   <div id="action">
     <h2>select json file for update</h2>
-    <input id="fileInput" type="file" onchange="REV.handleFiles(this.files)" />
+    <input id="fileInput" type="file" onchange="Revise.handleFiles(this.files)" />
   </div>
 </div>
 </body>
