amuse_um changed to amuse

--- a/demo/CHOOSE_amuse.html
+++ b/demo/CHOOSE_amuse.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>amuse_um json viewer</title>
-<link rel="stylesheet" href="css/amuse_um.css">
+<title>amuse json viewer</title>
+<link rel="stylesheet" href="css/amuse.css">
 <script src="js/Choose.js"></script>
 <script src="js/amuse_PARSE.js"></script>
 <script src="js/Viewer.js"></script>
