--- a/demo/cooper_hewitt_Matchsafe.html
+++ b/demo/cooper_hewitt_Matchsafe.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>AMUSE_UM BROWSER</title>
-<link rel="stylesheet" href="css/amuse_um.css">
+<title>AMUSE BROWSER</title>
+<link rel="stylesheet" href="css/amuse.css">
 <script src="js/Viewer.js"></script>
-<script src="js/amuse_um.js"></script>
+<script src="js/amuse.js"></script>
 <script src="objects/cooper_hewitt_Matchsafe.js"></script>
 <script type="text/javascript" >
 function start(){
@@ -11,13 +11,13 @@ function start(){
     query =  window.location.search.slice(1);
   }
   else{ query = ""}
-amuse_um.session_init("cooper_hewitt_Matchsafe",query);return ""; }
+amuse.session_init("cooper_hewitt_Matchsafe",query);return ""; }
 onload = start;
 </script>
 </head>
 <body>
 <div id="amused_body">
-<h1 id="headline" >AMUSE_UM BROWSER</h1>
+<h1 id="headline" >AMUSE BROWSER</h1>
 <div id="report">Failed to load javascript</div>
 <div id="cursor">
 <img src="images/move_down.gif" id="move_down">
