--- a/node_webkit/amuse_nw.html
+++ b/node_webkit/amuse_nw.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>AMUSE_UM BROWSER / EDITOR</title>
-<link rel="stylesheet" href="css/amuse_um.css">
+<title>AMUSE BROWSER / EDITOR</title>
+<link rel="stylesheet" href="css/amuse.css">
 <script src="js/amuse_NW.js"></script>
 <script src="js/nFSO.js"></script>
 <script src="js/Viewer.js"></script>
