--- a/node_webkit/revise_JSON.html
+++ b/node_webkit/revise_JSON.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>amuse-um revise JSON</title>
-<link rel="stylesheet" href="css/amuse_um.css">
+<title>amuse revise JSON</title>
+<link rel="stylesheet" href="css/amuse.css">
 <script src="js/Revise.js"></script>
 <script src="js/nFSO.js"></script>
 <script src="js/amuse_PARSE.js"></script>
 </head>
 <body>
 <div id="amused_body">
-  <h1 id="headline" >amuse-um synch JSON</h1>
+  <h1 id="headline" >amuse synch JSON</h1>
   <div id="report">Failed to load javascript
   </div>
   <div id="action">
