--- a/testing/test_parsing.html
+++ b/testing/test_parsing.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>amuse parse September 23rd 2014</title>
-<link rel="stylesheet" href="../css/amuse_um.css">
+<link rel="stylesheet" href="../css/amuse.css">
 <script src="../amuse_PARSE.js"></script>
 <script src="js/amuse_test_parsing.js"></script>
 </head>
