--- a/testing/test_csv.html
+++ b/testing/test_csv.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>amuse csv September 23rd 2014</title>
-<link rel="stylesheet" href="../css/amuse_um.css">
+<link rel="stylesheet" href="../css/amuse.css">
 <script src="../amuse_CSV.js"></script>
 <script src="js/amuse_test_csv.js"></script>
 </head>
